--- a/assets/css/openadms-ui.css
+++ b/assets/css/openadms-ui.css
@@ -1,19 +1,10 @@
-html {
-    height: 100%;
-}
-
 body {
-    min-height: 100%;
-    display: grid;
-    grid-template-rows: 1fr auto;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
 
 .main.container {
+    flex: 1;
     margin: 5em 0 5em 0;
-}
-
-.ui.footer.segment {
-    grid-row-start: 2;
-    grid-row-end: 3;
-    margin-top: 15em;
 }
