Fixed file paths.

--- a/assets/css/semantic.css
+++ b/assets/css/semantic.css
@@ -7508,8 +7508,8 @@ a.ui.inverted.grey.header:hover {
 
 @font-face {
   font-family: 'Icons';
-  src: url("/assets/fonts/icons.eot");
-  src: url("/assets/fonts/icons.eot?#iefix") format('embedded-opentype'), url("/assets/fonts/icons.woff2") format('woff2'), url("/assets/fonts/icons.woff") format('woff'), url("/assets/fonts/icons.ttf") format('truetype'), url("/assets/fonts/icons.svg#icons") format('svg');
+  src: url("../fonts/icons.eot");
+  src: url("../fonts/icons.eot?#iefix") format('embedded-opentype'), url("../fonts/icons.woff2") format('woff2'), url("../fonts/icons.woff") format('woff'), url("../fonts/icons.ttf") format('truetype'), url("../fonts/icons.svg#icons") format('svg');
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
