--- a/semantic/src/theme.less
+++ b/semantic/src/theme.less
@@ -47,9 +47,11 @@
        Fonts
 -------------------*/
 
+/*
 .loadFonts() when (@importGoogleFonts) {
-  @import url('@{googleProtocol}fonts.googleapis.com/css?family=@{googleFontRequest}');
+  @import (css) url('@{googleProtocol}fonts.googleapis.com/css?family=@{googleFontRequest}');
 }
+*/
 
 /*------------------
      Overrides
