--- a/semantic/src/definitions/globals/site.less
+++ b/semantic/src/definitions/globals/site.less
@@ -44,10 +44,6 @@ body {
   line-height: @lineHeight;
   color: @textColor;
   font-smoothing: @fontSmoothing;
-  /* Added for OpenADMS UI: */
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
 }
 
 /*******************************
@@ -139,6 +135,7 @@ a:hover {
   body ::-webkit-scrollbar {
     -webkit-appearance: none;
     width: @customScrollbarWidth;
+    height: @customScrollbarHeight;
   }
   body ::-webkit-scrollbar-track {
     background: @trackBackground;
